* fix issue with mybatis not recognizing mapper xmls * fix issue with content access logic

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -30,7 +30,7 @@ spring:
 
 # - MyBatis -
 mybatis:
-  mapperLocations: classpath*:**/mappers/*.xml
+  mapperLocations: classpath*:at/sparklingscience/urbantrees/mappers/*.xml
   typeAliasesPackage: at.sparklingscience.urbantrees.domain
   configuration:
     #cacheEnabled: false
